# hackclub-resolution-rust-w2

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: consts.rs  lib.rs  main.rs
