[package]
name = "w2_20p3"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", features = ["persistence"] }
notify-rust = "4.12.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[lints.clippy]
pedantic = "warn"
suboptimal_flops = "warn"
imprecise_flops = "warn"
